--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,14 @@ __pycache__/
 dist/
 build/
 .eggs/
+# ===== Python =====
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.pyc.*
+*.pyd
+*.pyo
 
 # ------------------------
 # Virtual environments
@@ -22,17 +30,25 @@ build/
 venv/
 env/
 
-# ------------------------
-# Jupyter
-# ------------------------
+.vscode/
+*.code-workspace
+.idea/
+*.iml
+
+# ===== Jupyter =====
 .ipynb_checkpoints/
+*.ipynb_checkpoints
 
 # ------------------------
 # Data
 # ------------------------
+data/
 data/raw/*
 data/processed/*
 !data/.gitkeep   # keep empty folder structure
+data/processed/*.csv    # keep raw data out of repo if large
+*.h5
+*.parquet
 
 # ------------------------
 # Models & outputs
@@ -53,3 +69,19 @@ logs/
 # ------------------------
 .vscode/
 .idea/
+
+# ===== Env =====
+.env
+.venv/
+venv/
+ENV/
+env/
+pip-log.txt
+pip-delete-this-directory.txt
+
+# ===== Misc =====
+*.zip
+*.tar.gz
+*.egg-info/
+dist/
+build/
